--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wretry.action",
   "version": "0.1.0",
   "description": "Retries an Github Action step on failure",
-  "main": "src/index.js",
+  "main": "src/Index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
