--- a/will.yml
+++ b/will.yml
@@ -1,6 +1,6 @@
 about:
   name: wretry.action
-  version: 0.2.4
+  version: 0.2.6
   description: Retries an Github Action step on failure
   enabled: 1
   author: Kostiantyn Wandalen <wanalen@01.school>
@@ -236,14 +236,13 @@ step:
     criterion:
       content: prime
       debug: release
-  bump.minor:
+  bump:
+    inherit: version.bump
     criterion:
-      semantic: minor
-    versionDelta: 0.1.0
-  bump.patch:
-    criterion:
-      semantic: patch
-    versionDelta: 0.0.1
+      bump:
+        - major
+        - minor
+        - patch
   sync:
     inherit: git.sync
     dirPath: .
@@ -253,10 +252,7 @@ step:
   commit:
     inherit: git
     command: 'commit -am "version {about::version}"'
-  tag.version:
-    inherit: git.tag
-    tag: 'v{about::version}'
-  tag.simple:
+  tag:
     inherit: git.tag
     tag: '{about::version}'
   push:
@@ -266,33 +262,34 @@ step:
     inherit: repo.release
     tag: '{about::version}'
 build:
-  action.release.patch:
+  release.patch:
     criterion:
       publish: 1
       default: 1
-      semantic: patch
+      bump: patch
     steps:
       - sync
       - bump.*=1
       - npm.generate.proto
       - add.all
       - commit
-      - tag.version
-      - tag.simple
+      - tag
       - push
       - release
-  action.release.minor:
+  action.release:
     criterion:
       publish: 1
-      semantic: minor
+      bump:
+        - major
+        - minor
+        - patch
     steps:
       - sync
       - bump.*=1
       - npm.generate.proto
       - add.all
       - commit
-      - tag.version
-      - tag.simple
+      - tag
       - push
       - release
   doc.export:
