--- a/.github/workflows/ActionPush.yml
+++ b/.github/workflows/ActionPush.yml
@@ -15,6 +15,7 @@ jobs :
       matrix :
         os : [ ubuntu-latest, windows-latest, macos-latest ]
         node-version : [ 14.x ]
+    if : "!startsWith( github.ref, 'refs/tags' )"
     runs-on : ${{ matrix.os }}
     steps :
     - name : Setup git
