Move back all standard workflows, badge depends on workflow `StandardPublish.yml`

--- a/.github/workflows/StandardPublish.yml
+++ b/.github/workflows/StandardPublish.yml
@@ -1,19 +1,11 @@
 
-name : pr
-on : [ pull_request ]
+name : publish
+on : [ push ]
+
 
 jobs :
 
-  Cancel :
-    name : 'Cancel Previous Runs'
-    runs-on : ubuntu-latest
-    timeout-minutes : 1
-    steps :
-      - uses : styfle/cancel-workflow-action@0.4.0
-        with :
-          access_token : ${{ github.token }}
-
-  Fast :
+  Full :
     env :
       PRIVATE_WTOOLS_BOT_TOKEN : ${{ secrets.PRIVATE_WTOOLS_BOT_TOKEN }}
       PRIVATE_WTOOLS_BOT_SSH_KEY : ${{ secrets.PRIVATE_WTOOLS_BOT_SSH_KEY }}
@@ -24,7 +16,8 @@ jobs :
       fail-fast : false
       matrix :
         os : [ ubuntu-latest, windows-latest, macos-latest ]
-        node-version : [ 14.x ]
+        node-version : [ 10.x, 12.9.1, 14.x, 15.x, 16.x ]
+    if : "startsWith( github.event.head_commit.message, 'version' ) && startsWith( github.ref, 'refs/tags/v' )"
     runs-on : ${{ matrix.os }}
     steps :
     - name : Setup git
@@ -46,7 +39,7 @@ jobs :
     - name : Update npm if current version is 6
       if : "startsWith( steps.getnpmver.outputs.npmver, '6.' )"
       run : npm install -g npm@latest-6
-    - run : npm -g i willbe@stable
+    - run : npm -g i willbe@delta
     - run : will .npm.install
     - name : Environment
       run : env
