Extend willfile, add scenario to build compiled dependencies

--- a/will.yml
+++ b/will.yml
@@ -155,7 +155,72 @@ reflector:
     filePath:
       '**.test*': 1
       'path::proto': '{path::out.*=1}/Tests.test.s'
+  clean.modules:
+    inherit: predefined.debug.v2
+    src :
+      filePath : ./node_modules
+      maskAll :
+        excludeAny :
+           - !!js/regexp '/@actions/'
+           - !!js/regexp '/bindings/'
+           - !!js/regexp '/argparse/'
+           - !!js/regexp '/file-uri-to-path/'
+           - !!js/regexp '/graceful-fs/'
+           - !!js/regexp '/js-yaml/'
+           - !!js/regexp '/proper-lockfile/'
+           - !!js/regexp '/retry/'
+           - !!js/regexp '/signal-exit/'
+           - !!js/regexp '/tunnel/'
+           - !!js/regexp '/wdeasync/'
+           - !!js/regexp '/Joined.s/'
 step:
+  join.sources:
+    inherit: sources.join
+    entryPath: node_modules/wgittools/proto/wtools/amid/l3/git/entry/GitTools.ss
+    inPath:
+      filePath :
+        - node_modules/wgittools/proto/wtools/amid/l3/git/entry/GitTools.ss
+        - node_modules/wgittools/proto/wtools/amid/**/*.(s|ss)
+        - node_modules/wgittools/proto/node_modules/*
+    modulesList:
+      - wTools
+      - wBlueprint
+      - wProto
+      - wCopyable
+      - wCloner
+      - wTraverser
+      - wStringer
+      - wStringsExtra
+      - wLooker
+      - wEqualer
+      - wSelector
+      - wPathBasic
+      - wUriBasic
+      - wPathTools
+      - wWebUriBasic
+      - wReplicator
+      - wArraySorted
+      - wArraySparse
+      - wIntrospectorBasic
+      - wIntrospectorExtra
+      - wConsequence
+      - wProcedure
+      - wFilesBasic
+      - wRegexpObject
+      - wFieldsStack
+      - wVerbal
+      - wLogger
+      - wEventHandler
+      - wColor256
+      - wColor
+      - wProcess
+      - wRemote
+      - wRepoBasic
+      - wGitPath
+      - wGdf
+    outPath: 'node_modules/Joined.s'
+    interpreter : njs
+
   proto.export:
     inherit: module.export
     export: 'path::export'
@@ -222,6 +287,9 @@ step:
       raw: compiled
       tests: no.tests
       content: npm
+  clean.modules:
+    inherit: files.delete
+    filePath: reflector::clean.modules
   tst.proto:
     shell: 'tst {path::proto}'
     criterion:
@@ -337,3 +405,7 @@ build:
     steps:
       - 'build::debug'
       - 'build::npm.*=1'
+  install :
+    steps :
+      - join.sources
+      - clean.modules
