--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: 'retry action'
 author : |
-  Wandalen <wanalen@01.school>
+  Wandalen <wandalen@obox.systems>
   dmvict <dm.vict.kr@gmail.com>
 branding:
   icon: 'activity'
