--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "src/Main.js"
   ],
   "dependencies": {
+    "@actions/core": "^1.4.0",
     "wgittools": "alpha",
-    "@actions/core": "^1.4.0"
+    "willbe": "^0.5.535"
   },
   "devDependencies": {
     "wTesting": ""
