--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "src/Main.js"
   ],
   "dependencies": {
-    "wgittools": "alpha",
-    "@actions/core": "^1.8.2"
+    "wgittools": "",
+    "@actions/core": "1.8.2",
+    "@actions/github": "5.0.3",
+    "github-actions-parser": "0.26.0"
   },
   "devDependencies": {
     "wTesting": ""
