Restore version of dependency `wgittools`, compile updated dependency `wstarter`

--- a/will.yml
+++ b/will.yml
@@ -98,7 +98,7 @@ submodule:
     path: 'npm:///github-actions-parser!0.26.0'
     enabled: 0
   wgittools:
-    path: 'npm:///wgittools'
+    path: 'npm:///wgittools!alpha'
     enabled: 0
   wTesting:
     path: 'npm:///wTesting'
