--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "src/Main.js"
   ],
   "dependencies": {
-    "wgittools": "",
+    "wgittools": "alpha",
     "@actions/core": "1.8.2",
     "@actions/github": "5.0.3",
     "github-actions-parser": "0.26.0"
