Extend action, add trivial implementation of `job` context

--- a/action.yml
+++ b/action.yml
@@ -20,9 +20,13 @@ inputs:
     description: 'Setup working directory for the action. Works with only commands. Default is `github.workspace` path.'
     required: false
   github_token:
-    description: 'Get runner secret key. Extends context `github` if it required. Not documented in file `Readme.md`.'
+    description: 'Get runner secret key. It is autooption to extends context `github` for an external action. Not documented in file `Readme.md`.'
     required: false
     default: ${{ github.token }}
+  job_status:
+    description: 'Get job status. It is autooption to extends context `job` for an external action. Not documented in file `Readme.md`.'
+    required: false
+    default: ${{ job.status }}
   attempt_limit:
     description: 'Number of attempts'
     required: false
