Update file Readme, use valid link to workflow, add info about features

--- a/.github/workflows/wRetryActionPullRequest.yml
+++ b/.github/workflows/wRetryActionPullRequest.yml
@@ -13,7 +13,7 @@ jobs :
         with :
           access_token : ${{ github.token }}
 
-  Fast :
+  fast :
     env :
       PRIVATE_WTOOLS_BOT_TOKEN : ${{ secrets.PRIVATE_WTOOLS_BOT_TOKEN }}
       PRIVATE_WTOOLS_BOT_SSH_KEY : ${{ secrets.PRIVATE_WTOOLS_BOT_SSH_KEY }}
