--- a/.github/workflows/wRetryActionPush.yml
+++ b/.github/workflows/wRetryActionPush.yml
@@ -4,7 +4,7 @@ on : [ push ]
 
 jobs :
 
-  Fast :
+  fast :
     env :
       PRIVATE_WTOOLS_BOT_TOKEN : ${{ secrets.PRIVATE_WTOOLS_BOT_TOKEN }}
       PRIVATE_WTOOLS_BOT_SSH_KEY : ${{ secrets.PRIVATE_WTOOLS_BOT_SSH_KEY }}
